[package]
name = "sparky"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twilight-cache-inmemory = "0.8"
twilight-gateway = "0.8"
twilight-http = "0.8"
twilight-model = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"]}
